--- a/login.css
+++ b/login.css
@@ -48,7 +48,7 @@ body{
     top: 50%; 
     right: 12vw; 
     transform: translateY(-50%);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-family:'Poppins', sans-serif ;
 }
 .login-path .Welcome{
     font-size: 3vw;
@@ -76,7 +76,7 @@ body{
     font-size: 1.1vw;
 }
 .login-path input{
-    width: 10vw;
+    width: 15vw;
 }
 .login-path button{
     background-color: rgba(4, 21, 48, 1);
@@ -86,6 +86,8 @@ body{
     border: 1px solid transparent;
     border-radius: 3px;
     cursor: pointer;
+    margin-left: 10vw;
+    margin-top: 2vw;
 }
 .login-path button:hover{
     background-color:rgb(58, 95, 156);;
