--- a/home.css
+++ b/home.css
@@ -1,1 +1,27 @@
-    
+body{
+    background-color: aliceblue;
+}
+/* ------------------------------Nav Bar--------------------------------------- */
+.navbar{
+    display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.2vw;
+    color: #fff;
+    background-color: rgba(22, 40, 68, 1);
+    width: 100%;
+    height: 3vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.navbar .logo-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1vw;
+}
+.navbar .logo{
+    width: 2vw;
+    height: 2.5vw;
+    padding-top: 0vw;
+}
