--- a/login.css
+++ b/login.css
@@ -69,14 +69,28 @@ body{
 .login-part .student-id{
     font-size: 1.1vw;
 }
-.student-id input{
+/* .student-id input{
     width: 10vw;
-}
+    font-size: 0.9vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+} */
 .login-part .password{
     font-size: 1.1vw;
 }
+
+
 .login-part input{
+    display: block;   
     width: 15vw;
+    height: 1vw;
+    font-size: 0.9vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.password-icon{
+    position: absolute;
+    right: 0.5vw    ;
+    top: 12.4vw;
+    cursor: pointer;
 }
 .login-part button{
     background-color: rgba(4, 21, 48, 1);
@@ -90,7 +104,7 @@ body{
     margin-top: 2vw;
 }
 .login-part button:hover{
-    background-color:rgb(58, 95, 156);;
+    background-color:rgb(58, 95, 156);
     color: rgb(255, 255, 255);
     transition: 0.2s;
 }
