--- a/login.css
+++ b/login.css
@@ -41,6 +41,33 @@ body{
 }
 .navbar .school_name{
     padding-left: 0.5vw;
+    display: inline-block;
+}
+@media screen and (max-width: 430px) {
+    body{
+        background: 
+            linear-gradient(rgba(22, 40, 68, 0.65), rgba(22, 40, 68, 0.65)) no-repeat, 
+            url("bg.jpg") no-repeat;
+        background-blend-mode: multiply;
+        background-size: 100% 40%;
+        background-attachment: fixed;
+    }
+    .navbar{
+        display: flex;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.2vw;
+        color: #fff;
+        background-color: rgba(22, 40, 68, 1);
+        width: 100%;
+        height: 5vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+    
+    }
+    .navbar .school_name{
+        display: none;
+    }
 }
 /* ------------------------------Login--------------------------------------- */
 .login-part{
@@ -88,8 +115,8 @@ body{
 }
 .password-icon{
     position: absolute;
-    right: 0.5vw    ;
-    top: 12.4vw;
+    right: 0.5vw;
+    top: 68%;
     cursor: pointer;
 }
 .login-part button{
