--- a/login.css
+++ b/login.css
@@ -9,7 +9,7 @@ body{
 /* ------------------------------Nav Bar--------------------------------------- */
 .navbar{
     display: flex;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', 'sans-serif';
     font-size: 1.2vw;
     color: #fff;
     background-color: rgba(22, 40, 68, 1);
@@ -48,7 +48,7 @@ body{
     top: 50%; 
     right: 12vw; 
     transform: translateY(-50%);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-family:'Poppins', sans-serif ;
 }
 .login-path .Welcome{
     font-size: 3vw;
@@ -65,4 +65,30 @@ body{
     margin: 8px 0;
     padding: 10px 15px;
     border-radius: 4px;
+}
+.login-path .student-id{
+    font-size: 1.1vw;
+}
+.student-id input{
+    width: 10vw;
+}
+.login-path .password{
+    font-size: 1.1vw;
+}
+.login-path input{
+    width: 10vw;
+}
+.login-path button{
+    background-color: rgba(4, 21, 48, 1);
+    color: #fff;
+    font-size: 1.1vw;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.login-path button:hover{
+    background-color:rgb(58, 95, 156);;
+    color: rgb(255, 255, 255);
+    transition: 0.2s;
 }
